2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* charstrg.d (unpack_string): Rename local variable index to offset,
	to be consistent with the documentation.
	(unpack_string_ro): Add documentation.
	(SYSTEM::STORE-CHAR): Rename local variable index to offset.

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* control.d (CONSTANTP): Optimize a popSTACK().

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* makemake.in: Update documentation of --with-[no]gettext.

2001-08-16  Sam Steingold  <sds@gnu.org>

	* loop.lisp (expand-loop): WITH vars should always be bound on top

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* makemake.in (Makefile): Back up Makefile before erasing it.

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* spvw.d (loadmem): Take a 'const char*'.
	* spvw_memfile.d (loadmem): Take a 'const char*'. Create CYGDRIVE
	replacement using alloca. Fix oversized memmove argument.

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* pathname.d (PARSE-NAMESTRING): Verify consp before accessing Cdr.

2001-07-31  Arseny Slobodjuck <ampy@crosswinds.net>
	    Sam Steingold  <sds@gnu.org>

	* stream.d [WIN32_NATIVE]
	(rd_ch_keyboard): cast uAsciiChar in (*.uAsciiChar <= ' ') to
	uintB since uAsciiChar is signed in MSVC (!).
	(vktable): added 'WIN' key just to avoid 'unknown
	keyboard event' messages.
	Added keyboard OEM to local charset translation and then local
	to internal (for UNICODE). May be it will be nicer to automatically
	init *terminal-io* to OEM charset and decode input/output through
	internal encoding facility, but that should be done with care
	about other code.
	(check_window_stream): return its argument on success
	WIN32 console output:
	(console_handle, console_size, console_cursor_pos, console_needtoclose,
	 screenattr, attr) deleted global variables. 'encapsulated' them
	into window-stream. The latter changed to be channel-stream since
	iconv-based translations require channel-stream extra fields.