@@ -543,7 +543,7 @@ LISPSYM(find_symbol,"FIND-SYMBOL",lisp)
 LISPSYM(unintern,"UNINTERN",lisp)
 LISPSYM(export,"EXPORT",lisp)
 LISPSYM(unexport,"UNEXPORT",lisp)
-LISPSYM(reexport,"RE-EXPORT",ext)
+LISPSYM(re_export,"RE-EXPORT",ext)
 LISPSYM(import,"IMPORT",lisp)
 LISPSYM(shadowing_import,"SHADOWING-IMPORT",lisp)
 LISPSYM(shadow,"SHADOW",lisp)
